# ConsoleChatCpp_01

./: CMakeLists.txt  README.md
client_02/: CMakeLists.txt
client_02/src/: clientTest.cpp  clientTest.h  main.cpp  myChat.cpp  myChat.h  sha256.cpp  sha256.h
src/: Logger.cpp  Logger.h  main.cpp  mySQLTest.cpp  serverTest.cpp  serverTest.h
